[gd_scene load_steps=4 format=3 uid="uid://caln0humnxsve"]

[ext_resource type="Script" path="res://scripts/UIs/sign_post.gd" id="1_eahmb"]
[ext_resource type="Texture2D" uid="uid://bx46c40lso4ak" path="res://assets/sign_post.png" id="1_vusph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clt64"]
size = Vector2(79, 52)

[node name="SignPost" type="Area2D"]
collision_layer = 0
script = ExtResource("1_eahmb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vusph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -3)
shape = SubResource("RectangleShape2D_clt64")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -101.0
offset_right = 194.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
